--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -15,7 +15,7 @@ The deficiency of water in PEMFC can lead to a decrease in proton conductivity, 
 % 水合状态失效是燃料电池最常见的失效模式，约占总失效的一般，主要表现为干燥和水淹。短期水合状态失效会引起燃料电池输出性能的波动和降低。如果这种情况持续存在，可能会导致不可逆的衰减。
 \par
 In the event of a dry failure, the water content within the fuel cell stack is insufficient to maintain a properly hydrated state, leading to an increase in internal resistance and elevated heat production due to regions of the PEM not being fully hydrated.
-Prolonged dry conditions can potentially cause mechanical damage to the PEM, resulting in irreversible harm \cite{pattersonDamageCathodeCatalyst2006}.
+Prolonged dry conditions can potentially cause mechanical damage to the PEM, resulting in irreversible harm \cite{pattersonDamageCathodeCatalyst2006,wang_large-scale_2023}.
 This highlights the critical need for maintaining adequate water content to prevent performance degradation and structural integrity loss in the fuel cell system.
 % 在干燥失效的情况下，电堆内部的含水量太低，无法保持足够的水合状态，由于质子交换膜的某些区域没有完全水合，内阻增加，产热量增加。长期干燥甚至可能对质子交换膜造成机械损伤，造成不可逆的损坏\cite{pattersonDamageCathodeCatalyst2006}。
 In the event of a flood failure, the water content inside the stack is too high, and the liquid water gradually block the flow channel or reaction area,preventing the reaction gas from reaching the reaction site, causing a local "starvation" phenomenon\cite{chuExperimentalStudyInfluence2022,ohsModelingHydrogenStarvation2011}.
@@ -23,11 +23,11 @@ In the event of a flood failure, the water content inside the stack is too high,
 In severe instances, additional side reactions can occur within the fuel cell under these conditions, leading to damage to the carbon carrier\cite{ohsModelingHydrogenStarvation2011,kuracinaStudySelectedCharacteristics2014,jiaMitigationStrategiesHydrogen2017}. This emphasizes the importance of preventing extreme dry failures to safeguard the structural and functional integrity of the fuel cell components, thereby ensuring long-term reliability and performance.
 % 严重的情况下，此时燃料电池中会发生其他副反应，对碳载体造成损害
 \par
-In addition to the direct impact on output performance, the internal hydration state also indirectly affects environmental adaptability and durability\cite{yuanModelbasedObserversInternal2020,fuFuelCellHumidity2021}. In low temperature conditions, especially in sub-zero environments, the free water inside the fuel cell will freeze, thereby blocking the reactant channels, and even causing structural damage to the catalyst layer and diffusion layer\cite{taccaniEffectFlowField2011,doddsHydrogenFuelCell2015}. In addition, it will also affect the aging characteristics of the catalyst\cite{pattersonDamageCathodeCatalyst2006,sunModelingInfluenceGDL2005}. Flooding conditions will accelerate the loss of Pt surface area, while dry conditions will accelerate the corrosion of the carbon carrier \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}.
+In addition to the direct impact on output performance, the internal hydration state also indirectly affects environmental adaptability and durability\cite{yuanModelbasedObserversInternal2020,fuFuelCellHumidity2021}. In low temperature conditions, especially in sub-zero environments, the free water inside the fuel cell will freeze, thereby blocking the reactant channels, and even causing structural damage to the catalyst layer and diffusion layer\cite{taccaniEffectFlowField2011,doddsHydrogenFuelCell2015}. In addition, it will also affect the aging characteristics of the catalyst\cite{pattersonDamageCathodeCatalyst2006,sunModelingInfluenceGDL2005}. Flooding conditions will accelerate the loss of Pt surface area, while dry conditions will accelerate the corrosion of the carbon carrier \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015,}.
 % 除了直接影响输出性能外，内部水合状态还间接影响环境适应性和耐久性。在低温条件下，尤其是零度以下的环境下，燃料电池内部的游离水会结冰，从而堵塞反应物通道，甚至造成催化剂层和扩散层的结构损坏。此外，它还会影响催化剂的老化特性。水淹条件会加速 Pt 表面积的损失，而干燥条件会加速碳载体的腐蚀。
 \par
 
-Research on fuel cell hydration states utilizes indicators like water content, electrical signals, and neutron imaging\cite{hussainiVisualizationQuantificationCathode2009, leeVisualizationFloodingSingle2012}, but high costs and complexity limit neutron imaging's adoption. Instead, the law of conservation of mass is employed to compute water content during stable operation, validated by comparing calculated rates with observed water distributions\cite{pekulaStudyWaterDistribution2005,traboldSituInvestigationWater2006,yangVisualizationLiquidWater2004}.
+Research on fuel cell hydration states utilizes indicators like water content, electrical signals, and neutron imaging\cite{hussainiVisualizationQuantificationCathode2009, leeVisualizationFloodingSingle2012, atiyeh_experimental_2007,zhu_experimental_2019}, but high costs and complexity limit neutron imaging's adoption. Instead, the law of conservation of mass is employed to compute water content during stable operation, validated by comparing calculated rates with observed water distributions\cite{pekulaStudyWaterDistribution2005,traboldSituInvestigationWater2006,yangVisualizationLiquidWater2004}.
 
 % Research on the characterization of the internal hydration state of fuel cells has led to significant insights, with standard indicators including direct observation or computation of water content, electrical signals, pressure drop signals, and electrochemical signals \cite{hussainiVisualizationQuantificationCathode2009}. Determining the hydration state primarily involves assessing the internal water content, which is the most basic and accurate method. Techniques such as the transparent cell method, which uses transparent end plates and flow field plates to observe liquid water quantity \cite{leeVisualizationFloodingSingle2012}, and the neutron imaging method, which measures internal water content based on neutron beam attenuation \cite{pekulaStudyWaterDistribution2005, traboldSituInvestigationWater2006}, have been employed. However, the high cost and complexity of neutron imaging have restricted its widespread use. Consequently, researchers have turned to the law of conservation of mass to compute water content, measuring the flow rate of residual water during stable operation\cite{yangVisualizationLiquidWater2004}. Zhao et al. validated their model by comparing the calculated rate of change in water content with the observed water distribution in the flow channel\cite{zhaoStudyWaterTransport2021}.
 
@@ -59,7 +59,7 @@ The output voltage of a fuel cell is a direct indicator of hydration state fault
 % 	\caption[short]{The change of cathode and anode voltage drop with time during flooding process}
 % 	\label{fig:figure1}
 % \end{figure}
-The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}.
+The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015,quan_enhanced_2024,quan_thermal_2024,quan_minimum_nodate}.
 % % 基于电化学信号的检测方法主要有电化学阻抗谱、电流中断法、循环伏安法等。其中，电化学阻抗谱是最常见的水化状态检测方法，因为它可以区分不同的电化学过程，并且可以在线测试\ 引用{yousfisteinerDiagnosisPolymerElectrolyte2011，chenOperationCharacteristicsCarbon2015}。
 % The Fig \ref{fig:figure1} shows the difference in fuel cell impedance spectra under different air humidity conditions.
 % 图\ref{fig:figure1}显示了不同空气湿度条件下燃料电池阻抗谱的差异。
@@ -80,7 +80,7 @@ Therefore, researchers have considered utilizing the law of conservation of mass
 
 
 \par
-In addition, research has indicated that smaller-scale fuel cell stacks exhibit reduced sensitivity to gas flow rates\cite{bonnetDesign80kWePEM2008}, which can also cause the difference between small and big stacks.
+In addition, research has indicated that smaller-scale fuel cell stacks exhibit reduced sensitivity to gas flow rates\cite{bonnetDesign80kWePEM2008,khanafari_experimental_2024}, which can also cause the difference between small and big stacks.
 % 小尺寸电堆对于气体流量更不敏感
 % TODO: 添加更多的文献
 \par
