--- a/Research_on_water_status_Chapters/ref.bib
+++ b/Research_on_water_status_Chapters/ref.bib
@@ -453,7 +453,7 @@
   title = {Water Management in an Alkaline Fuel Cell},
   author = {Verhaert, Ivan and Verhelst, Sebastian and Janssen, Griet and Mulder, Grietus and De Paepe, Michel},
   date = {2011-08-01},
-  journaltitle = {International Journal of Hydrogen Energy},
+  journal = {International Journal of Hydrogen Energy},
   series = {International {{Conference}} on {{Hydrogen Production}} ({{ICH2P}})-2010},
   volume = {36},
   number = {17},
@@ -488,7 +488,7 @@
   title = {A {{Review}} of {{Water Management}} in {{Polymer Electrolyte Membrane Fuel Cells}}},
   author = {Ji, Mengbo and Wei, Zidong},
   date = {2009-12},
-  journaltitle = {Energies},
+  journal = {Energies},
   volume = {2},
   number = {4},
   pages = {1057--1106},
@@ -508,7 +508,7 @@
   title = {Simulation of Cathode Catalyst Durability under Fuel Cell Vehicle Operation –{{Effects}} of Stack Size and Temperature},
   author = {Shojayian, Mohammad and Kjeang, Erik},
   date = {2024-01-30},
-  journaltitle = {Journal of Power Sources},
+  journal = {Journal of Power Sources},
   volume = {591},
   pages = {233820},
   issn = {0378-7753},
@@ -524,7 +524,7 @@
   shorttitle = {Design of an {{80kWe PEM}} Fuel Cell System},
   author = {Bonnet, C. and Didierjean, S. and Guillet, N. and Besse, S. and Colinart, T. and Carré, P.},
   date = {2008-08},
-  journaltitle = {Journal of Power Sources},
+  journal = {Journal of Power Sources},
   volume = {182},
   number = {2},
   pages = {441--448},
@@ -541,7 +541,7 @@
 	issn = {01968904},
 	doi = {10.1016/j.enconman.2020.112537},
 	pages = {112537},
-	journaltitle = {Energy Conversion and Management},
+	journal = {Energy Conversion and Management},
 	shortjournal = {Energy Conversion and Management},
 	author = {Shen, Jun and Xu, Liang and Chang, Huawei and Tu, Zhengkai and Chan, Siew Hwa},
 	urldate = {2024-07-26},
@@ -557,7 +557,7 @@
 	doi = {10.1016/j.jpowsour.2013.04.044},
 	shorttitle = {Degradation aspects of water formation and transport in Proton Exchange Membrane Fuel Cell},
 	pages = {558--582},
-	journaltitle = {Journal of Power Sources},
+	journal = {Journal of Power Sources},
 	shortjournal = {Journal of Power Sources},
 	author = {Ous, T. and Arcoumanis, C.},
 	urldate = {2024-07-26},
@@ -573,7 +573,7 @@
 	issn = {03605442},
 	doi = {10.1016/j.energy.2023.128787},
 	pages = {128787},
-	journaltitle = {Energy},
+	journal = {Energy},
 	author = {Xiao, Fei and Chen, Tao and Gan, Zhongyu and Zhang, Ruixuan},
 	urldate = {2024-07-26},
 	date = {2023-12},
@@ -584,11 +584,10 @@
 	title = {Study of the impact of water management on the performance of {PEMFC} commercial stacks by impedance spectroscopy},
 	volume = {45},
 	issn = {03603199},
-	
 	doi = {10.1016/j.ijhydene.2020.04.139},
 	pages = {16724--16737},
 	number = {33},
-	journaltitle = {International Journal of Hydrogen Energy},
+	journal = {International Journal of Hydrogen Energy},
 	author = {Moçotéguy, P. and Ludwig, B. and Beretta, D. and Pedersen, T.},
 	urldate = {2024-07-28},
 	date = {2020-06},
@@ -599,13 +598,126 @@
 	title = {Impedance model for diagnosis of water management in fuel cells using artificial neural networks methodology},
 	volume = {41},
 	issn = {03603199},
-	
 	doi = {10.1016/j.ijhydene.2016.07.099},
 	pages = {17093--17101},
 	number = {38},
-	journaltitle = {International Journal of Hydrogen Energy},
+	journal = {International Journal of Hydrogen Energy},
 	author = {Laribi, Slimane and Mammar, Khaled and Hamouda, Messaoud and Sahli, Youcef},
 	urldate = {2024-07-28},
 	date = {2016-10},
 	langid = {english},
+}
+
+
+@article{atiyeh_experimental_2007,
+	title = {Experimental investigation of the role of a microporous layer on the water transport and performance of a {PEM} fuel cell},
+	volume = {170},
+	issn = {0378-7753},
+	doi = {10.1016/j.jpowsour.2007.04.016},
+	abstract = {A highly reliable experimental system that consistently closed the overall water balance to within 5\% was developed to study the role of a microporous layer ({MPL}), attached to carbon paper porous transport layer ({PTL}), on the water transport and performance of a standard 100cm2 active area {PEM} fuel cell. Various combinations of cells were built and tested with {PTLs} at the electrodes using either carbon fibre paper with a {MPL} ({SGL} 10BB) or carbon fibre paper without a {MPL} ({SGL} 10BA). The net water drag coefficient at three current densities (0.3, 0.5 and 0.7Acm−2) for two combinations of anode/cathode relative humidity (60/100\% and 100/60\%) and stoichiometric ratios of H2/air (1.4/3 and 1.4/2) was determined from water balance measurements. The addition of a {MPL} to the carbon fibre paper {PTL} at the cathode did not cause a statistically significant change to the overall drag coefficient although there was a significant improvement to the fuel cell performance and durability when a {MPL} was used at the cathode. The presence of a {MPL} on either electrode or on both electrodes also exhibited similar performance compared to when the {MPL} was placed at the cathode. These results indicate that the presence of {MPL} indeed improves the cell performance although it does not affect the net water drag coefficient. The correlation between cell performance and global water transport cannot be ascertained and warrants further experimental investigation.},
+	pages = {111--121},
+	number = {1},
+	journal = {Journal of Power Sources},
+	author = {Atiyeh, Hasan K. and Karan, Kunal and Peppley, Brant and Phoenix, Aaron and Halliop, Ela and Pharoah, Jon},
+	urldate = {2024-03-12},
+	date = {2007-06-30},
+	keywords = {{PEM} fuel cell, Water transport, Ionomeric membrane, Microporous layer, Net water drag},
+	file = {Atiyeh et al_2007_Experimental investigation of the role of a microporous layer on the water.pdf:C\:\\Users\\Yiyu\\Zotero\\storage\\ME7V4XNK\\Atiyeh et al_2007_Experimental investigation of the role of a microporous layer on the water.pdf:application/pdf},
+}
+
+@article{khanafari_experimental_2024,
+	title = {Experimental study of water management of a three-cell {PEM} fuel cell stack using adaptive neuro-fuzzy approximation and fuzzy control},
+	volume = {50},
+	issn = {03603199},
+	doi = {10.1016/j.ijhydene.2023.09.192},
+	pages = {931--944},
+	journal = {International Journal of Hydrogen Energy},
+	author = {Khanafari, Ali and Alasty, Aria and Kermani, Mohammad Jafar and Asghari, Saeed},
+	urldate = {2024-03-13},
+	date = {2024-01},
+	langid = {english},
+}
+
+@article{zhu_experimental_2019,
+	title = {Experimental investigation of the effect of membrane water content on {PEM} fuel cell cold start},
+	volume = {158},
+	issn = {1876-6102},
+	doi = {10.1016/j.egypro.2019.01.401},
+	series = {Innovative Solutions for Energy Transitions},
+	abstract = {In this study, the effect of membrane water content on proton exchange membrane ({PEM}) fuel cell cold start is investigated experimentally in detail. The cyclic voltammetry ({CV}) and high frequency resistance ({HFR}) are introduced to character electrochemical active surface area ({ECSA}) of the electrode and water content in the cell. Under normal condition, it is found that {ECSA} decreases with the decrement of membrane water content and a critical point of water content exists for the {ECSA} sharp decrement. Under cold start operation, low initial water content aggravates the voltage drop when the load is applied. The high initial water content leads to a rapid membrane water saturation, causing a short shutdown time, while the low initial water content may lead to a bad cold start performance. For the excessive low initial water content, the voltage reversal due to water electrolysis and carbon corrosion is also considered. Besides, the {HFR} is also recorded during cold start operation to estimate ice formation in the cell. It is indicated that a proper initial membrane water content after purge is significantly vital for {PEM} fuel cell cold start to achieve the balance of {ECSA} and ice storage capacity.},
+	pages = {1724--1729},
+	journal = {Energy Procedia},
+	author = {Zhu, Mengqian and Xie, Xu and Wu, Kangcheng and Najmi, Aezid-Ul-Hassan and Jiao, Kui},
+	urldate = {2024-04-24},
+	date = {2019-02-01},
+	keywords = {Electrochemically active surface area, Voltage reserval phenomenon, Water content},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Yiyu\\Zotero\\storage\\YXRRCJYK\\S1876610219304217.html:text/html;Zhu et al_2019_Experimental investigation of the effect of membrane water content on PEM fuel.pdf:C\:\\Users\\Yiyu\\Zotero\\storage\\P578XGT7\\Zhu et al_2019_Experimental investigation of the effect of membrane water content on PEM fuel.pdf:application/pdf},
+}
+
+
+@article{wang_large-scale_2023,
+	title = {Large-scale physically accurate modelling of real proton exchange membrane fuel cell with deep learning},
+	volume = {14},
+	issn = {2041-1723},
+	doi = {10.1038/s41467-023-35973-8},
+	abstract = {Abstract
+            
+              Proton exchange membrane fuel cells, consuming hydrogen and oxygen to generate clean electricity and water, suffer acute liquid water challenges. Accurate liquid water modelling is inherently challenging due to the multi-phase, multi-component, reactive dynamics within multi-scale, multi-layered porous media. In addition, currently inadequate imaging and modelling capabilities are limiting simulations to small areas ({\textless}1 mm
+              2
+              ) or simplified architectures. Herein, an advancement in water modelling is achieved using X-ray micro-computed tomography, deep learned super-resolution, multi-label segmentation, and direct multi-phase simulation. The resulting image is the most resolved domain (16 mm
+              2
+              with 700 nm voxel resolution) and the largest direct multi-phase flow simulation of a fuel cell. This generalisable approach unveils multi-scale water clustering and transport mechanisms over large dry and flooded areas in the gas diffusion layer and flow fields, paving the way for next generation proton exchange membrane fuel cells with optimised structures and wettabilities.},
+	pages = {745},
+	number = {1},
+	journal = {Nat Commun},
+	author = {Wang, Ying Da and Meyer, Quentin and Tang, Kunning and {McClure}, James E. and White, Robin T. and Kelly, Stephen T. and Crawford, Matthew M. and Iacoviello, Francesco and Brett, Dan J. L. and Shearing, Paul R. and Mostaghimi, Peyman and Zhao, Chuan and Armstrong, Ryan T.},
+	urldate = {2024-03-13},
+	date = {2023-02-14},
+	langid = {english},
+	file = {Wang et al_2023_Large-scale physically accurate modelling of real proton exchange membrane fuel.pdf:C\:\\Users\\Yiyu\\Zotero\\storage\\3Y95EL5X\\Wang et al_2023_Large-scale physically accurate modelling of real proton exchange membrane fuel.pdf:application/pdf},
+}
+
+
+
+
+@article{quan_minimum_nodate,
+	title = {Minimum hydrogen consumption‐based energy management strategy for hybrid fuel cell unmanned aerial vehicles using direction prediction optimal foraging algorithm},
+	doi = {10.1002/fuce.202200121},
+	abstract = {In hybrid energy storage systems of fuel cell unmanned aerial vehicles ({UAVs}), achieving energy management while minimizing hydrogen consumption is the main goal for economic aspects and endurance en...},
+	author = {Quan, Rui and Li, Zhongxin and Liu, Pin and Li, Yangxin and Chang, Yufang and Yan, Huaicheng},
+	urldate = {2024-10-05},
+	langid = {english},
+	journal = {Fuel Cells}
+}
+
+@article{quan_thermal_2024,
+	title = {Thermal performance simulation and numerical analysis of a fuel cell waste heat utilization system for automotive application},
+	volume = {252},
+	issn = {1359-4311},
+	
+	doi = {10.1016/j.applthermaleng.2024.123719},
+	abstract = {To recover the waste heat generated by proton exchange membrane fuel cells, an onboard fuel cell waste heat utilization system used for cockpit heating was constructed in this study. The heat transfer numerical model of the system was established, and experimental data validated the feasibility of the model. Additionally, the thermal performance of the onboard fuel cell waste heat utilization system was analyzed under various operational conditions. The results indicate that the air temperature and heat transfer coefficient of the heat exchanger are positively correlated with the thermal performance of the cockpit heating, while the radiator inlet air velocity and pump speed show a negative correlation with the system’s performance. Under other steady conditions, the stabilized temperature of the cockpit is increased by 150 \% when the air temperature increases from 0 °C to 40 °C, and the cockpit temperature is reduced by 20 \% when the water pump speed accelerates from 100 to 300 r/min. Furthermore, under 20 °C ambient temperatures and with an inlet air velocity of 3 m/s, water pump speed of 500 r/min, and a heat exchange coefficient of 5,000 W·m−2·K−1, the fuel cell waste heat utilization system achieves an optimal waste heat utilization efficiency of 50.8 \% underrated working conditions. In summary, this study offers theoretical guidance for designing and numerically evaluating a vehicular waste heat utilization system using fuel cells.},
+	pages = {123719},
+	journal = {Applied Thermal Engineering},
+	author = {Quan, Rui and Yang, Zhiyu and Qiu, Zhizhuo and Li, Xuerong and Chang, Yufang},
+	urldate = {2024-10-05},
+	date = {2024-09-01},
+	keywords = {Efficiency, Numerical model, Proton exchange membrane fuel cell, Thermal performance, Waste heat utilization},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Yiyu\\Zotero\\storage\\PLDZCW85\\S1359431124013875.html:text/html},
+}
+
+@article{quan_enhanced_2024,
+	title = {An enhanced fault diagnosis method for fuel cell system using a kernel extreme learning machine optimized with improved sparrow search algorithm},
+	volume = {50},
+	issn = {0360-3199},
+	
+	doi = {10.1016/j.ijhydene.2023.10.019},
+	abstract = {Proton exchange membrane fuel cells ({PEMFC}) have a broad development prospect in the fields of vehicles, drones and ships due to their high efficiency and cleanliness. However, the problems of insufficient reliability and durability have severely restricted their industrialization process. To improve the safety, reliability and durability of fuel cell system, a fault diagnosis method that combined kernel principal component analysis ({KPCA}) with an improved sparrow search algorithm ({ISSA}) and an optimized kernel extreme learning machine ({KELM}) was proposed in this study. Firstly, {KPCA} is utilized to extract nonlinear features from fault indicators and obtain the fault feature vector of the fuel cell system. Then, by incorporating logistic mapping and Cauchy Gaussian mutation strategies to improve the Sparrow Search Algorithm ({SSA}), {ISSA} was used to optimize the kernel parameters and regularization coefficient in {KELM}. The experimental results show that the {KPCA}-{ISSA}-{KELM} method for normal conditions, hydrogen leakage and membrane drying are 100\%, 98.5\% and 100\%, respectively, with an overall accuracy of 99.5\% and an operation time of 0.97s. The diagnostic accuracy of the proposed method is 10.4\%, 5.7\%, 4.8\%, 4.2\%, 3.0\%, 1.8\% higher than support vector machine ({SVM}), back propagation neural network ({BPNN}), {KELM}, genetic algorithm-based {KELM} ({GA}-{KELM}), particle swarm optimization-based {KELM} ({PSO}-{KELM}) and {SSA}-{KELM}, respectively, and the operation time is only slightly higher than that of the {SVM} model and {KELM} model.},
+	pages = {1184--1196},
+	journal = {International Journal of Hydrogen Energy},
+	author = {Quan, Rui and Liang, Wenlong and Wang, Junhui and Li, Xuerong and Chang, Yufang},
+	urldate = {2024-10-05},
+	date = {2024-01-02},
+	keywords = {Fault diagnosis, Fuel cell system, Improved sparrow search algorithm, Kernel extreme learning machine, Kernel principal component analysis},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Yiyu\\Zotero\\storage\\CZ43YE5K\\S0360319923050851.html:text/html},
 }
