--- a/Research_on_water_status_Chapters/Chapter3_Results.tex
+++ b/Research_on_water_status_Chapters/Chapter3_Results.tex
@@ -3,7 +3,7 @@
 
 Fig \ref{fig:fig5} shows the change in the water flow out of the air side at different working temperatures. As can be seen from the Fig \ref{fig:fig5a}, as the temperature rises, the water content in the air side exhaust gas generally shows an upward trend. The higher the temperature, the higher the saturation vapor pressure of the fuel cell. Under the same water content, the relative humidity will decrease at this time, which is equivalent to the generation of less liquid water inside the fuel cell, and the ability of the gas to carry water is improved. This change applies to both the air side and the hydrogen side, which is shown in Fig \ref{fig:figure4b} and Fig \ref{fig:figure4c}. Therefore, under the same other conditions, the water flow out of the fuel cell stack by the air increases with the increase in temperature, and more liquid water is collected by the air side exhaust gas collection device.
 % 图\ref{fig:fig5}显示了不同工作温度下空气侧流出水流量的变化。 从图\ref{fig:fig5}(a)可以看出，随着温度的升高，空气侧废气中的含水量总体呈上升趋势。 温度越高，燃料电池的饱和蒸气压越高。 相同含水量下，此时相对湿度会降低，相当于燃料电池内部产生的液态水较少，气体携带水的能力提高。 这种变化适用于空气侧和氢气侧，如图（b）和图（c）所示。 因此，在其他条件相同的情况下，空气从燃料电池堆流出的水量随着温度的升高而增加，空气侧废气收集装置收集到更多的液态水。
-\subfile{Airside_Waterflow_figure_2.tex}[h]
+\subfile{Airside_Waterflow_figure_2.tex}
 \subfile{Airside_Waterflow_figure_1.tex}
 
 \par
@@ -21,7 +21,7 @@ Fig \ref{fig:fig5a} shows that as the temperature rises, the water content in th
 
 Compare the water flow out of the air side and the hydrogen side at 120A, 210A, 300A load currents, different coolant inlet temperatures, and different air metering ratios, as shown in Fig \ref{fig:figure6a}. Similar to the impact of working temperature on the water flow out of the air side, under the same load current, the higher the air metering ratio, the more water is carried out of the stack by the unreacted air, which also applies to load current of 210A(Fig \ref{fig:figure6b}) and 300A(Fig \ref{fig:figure6c}). It should be noted that this growth is not unlimited. After reaching a certain air metering ratio, the growth of the water content in the air side exhaust gas slows down, especially when the load current is small and the working temperature is high. This is because at this time, the water produced by the electrochemical reaction of the fuel cell has been completely carried out of the fuel cell by high-temperature high-speed air. At this time, even if the air metering ratio continues to increase, the water content of the exhaust gas will not continue to increase.
 % 比较120A、210A、300A负载电流、不同冷却液入口温度、不同空气计量比下空气侧和氢气侧流出的水流量，如图\ref{figure6}(a)所示。 与工作温度对空气侧水流量的影响类似，在相同的负载电流下，空气计量比越高，未反应的空气带出电堆的水就越多，这也适用于负载电流 210A(图\ref{图6}(b))和300A(图\ref{图6}(c))。 值得注意的是，这种增长并不是无限的。 达到一定的空气计量比后，空气侧废气中含水量的增长减慢，特别是在负载电流较小、工作温度较高时。 这是因为此时燃料电池电化学反应产生的水已经被高温高速空气完全带出燃料电池。 此时，即使空气计量比继续增加，废气的含水量也不会继续增加。
-\subfile{Airside_Waterflow_figure_grouped_by_temperature.tex}[h]
+\subfile{Airside_Waterflow_figure_grouped_by_temperature.tex}
 \par
 For the hydrogen side, similarly, as the air metering ratio increases, the water flow out of the hydrogen side basically continues to decrease. After the above analysis, as the air metering ratio increases, the water stored in the cathode will be taken out of the stack by the high-speed airflow, and the water flow diffused to the hydrogen side through concentration difference becomes less, so relatively speaking, the water collected on the hydrogen side will become less. However, the degree of decline is different. Under low temperature (120A/60$^{\circ}C$, 210A/60$^{\circ}C$, and 300A/63$^{\circ}C$), they all show a relatively gentle decline. As the temperature rises, the water flow out of the hydrogen side is also gradually affected by the air metering ratio.
 % 对于氢气侧，同样，随着空气计量比的增大，氢气侧流出的水流量基本持续减少。 经过上述分析，随着空气计量比的增大，储存在阴极的水会被高速气流带出电堆，通过浓度差扩散到氢气侧的水流量变少，所以相对而言 ，氢气侧收集的水会变少。 但下降的程度不同。 在低温下（120A/60$^{\circ}C$、210A/60$^{\circ}C$、300A/63$^{\circ}C$），它们都表现出相对平缓的下降。 随着温度的升高，氢气侧流出的水量也逐渐受到空气计量比的影响。
@@ -46,10 +46,10 @@ Using the method described above, the rate of change of the water content inside
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[\label{fig:fig8a}]{\includegraphics[width=0.4\textwidth]{Research_pictures/fig8a.jpg}}
-	\subfloat[\label{fig:fig8b}]{\includegraphics[width=0.4\textwidth]{Research_pictures/fig8b.jpg}}
+	\subfloat[\label{fig:fig8a}]{\includegraphics[width=0.4\textwidth]{Research_pictures/fig8a.png}}
+	\subfloat[\label{fig:fig8b}]{\includegraphics[width=0.4\textwidth]{Research_pictures/fig8b.png}}
 	\\
-	\subfloat[\label{fig:fig8c}]{\includegraphics[width=0.4\textwidth]{Research_pictures/fig8c.jpg}}
+	\subfloat[\label{fig:fig8c}]{\includegraphics[width=0.4\textwidth]{Research_pictures/fig8c.png}}
 	\caption{Comparison chart of internal water content of fuel cell system under different conditions (a:120A; b:210A; c:300A)}
 	\label{fig:figure8}
 \end{figure}
@@ -59,7 +59,9 @@ As can be seen from Fig \ref{fig:figure8}, under the same load current, as the w
 \par
 Furthermore, this paper uses the method of linear regression to analyze the impact of working temperature and air metering ratio on the water content inside the fuel cell system. Before this, the data needs to be standardized. This paper uses the Z-score normalization method\cite{altman2013predicting,camska2013predicting}, which is
 % 此外，本文采用线性回归的方法分析了工作温度和空气计量比对燃料电池系统内部含水量的影响。 在此之前，需要对数据进行标准化处理。 本文采用Z-score归一化方法，即
-$$x^{*}=x-\mu\sigma$$
+\begin{equation}
+x^{*}=x-\mu\sigma	
+\end{equation}
 
 \par
 Table \ref{tab:RegressionAnalysis} shows the result of analysis:
@@ -96,11 +98,11 @@ As shown in Fig \ref{fig:figure9}, 120A/67$^{\circ}C$/2.15, 210A/68$^{\circ}C$/2
 \begin{figure}[ht]
 	\centering
 	\subfloat[\label{fig:fig9a}]{
-		\includegraphics[width=0.5\textwidth]{Research_pictures/fig9a.jpg}
+		\includegraphics[width=0.5\textwidth]{Research_pictures/fig9a.png}
 	}
-	\subfloat[\label{fig:fig9b}]{\includegraphics[width=0.5\textwidth]{Research_pictures/fig9b.jpg}}
+	\subfloat[\label{fig:fig9b}]{\includegraphics[width=0.5\textwidth]{Research_pictures/fig9b.png}}
 
-	\subfloat[\label{fig:fig9c}]{\includegraphics[width=0.5\textwidth]{Research_pictures/fig9c.jpg}}
+	\subfloat[\label{fig:fig9c}]{\includegraphics[width=0.5\textwidth]{Research_pictures/fig9c.png}}
 	\caption{Selection of fuel cell OS operating environment (Working environment surrounded by dots, a:120A; b:210A; c:300A)}
 	\label{fig:figure9}
 \end{figure}
